[package]
name = "rusty_theme"
version = "0.1.0"
authors = ["alec greenaway <aag3@pdx.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.libc]
version = "0.2.48"

[dependencies.scopeguard]
version = "1.0"

[dependencies.x11]
version = "2.18"
features = ["xlib"]

[dependencies]
image = "0.23.0"
